# malloc_count

./: Android.mk  CMakeLists.txt  Makefile  README  README.md  malloc_count.c  malloc_count.h  memprofile.h  stack_count.c  test.c
test-malloc_count/: Application.mk  test.c
test-memprofile/: Application.mk
